--- a/heavenAndAle/HeavenAndAle.css
+++ b/heavenAndAle/HeavenAndAle.css
@@ -23,3 +23,12 @@ td {
     top: 25%;
     left: 25%;
 }
+
+.msgcanvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 100px;
+}
